@@ -1,0 +1,26 @@
+E/ANALYSIS/CVS
+E/BASICS/CVS
+E/CLAUSES/CVS
+E/CONTROL/CVS
+E/CVS
+E/development_tools/CVS
+E/DOC/CVS
+E/etc/CVS
+E/EXAMPLE_PROBLEMS/CVS
+E/EXAMPLE_PROBLEMS/LOP/CVS
+E/EXAMPLE_PROBLEMS/TPTP/CVS
+E/EXTERNAL/CVS
+E/HEURISTICS/CVS
+E/include/CVS
+E/INOUT/CVS
+E/LEARN/CVS
+E/lib/CVS
+E/ORDERINGS/CVS
+E/PCL2/CVS
+E/PROPOSITIONAL/CVS
+E/PROVER/CVS
+E/PYTHON/CVS
+E/SIMPLE_APPS/CVS
+E/SKELETONS/CVS
+E/TERMS/CVS
+E/TEST/CVS
